tests/endtoend/failure/expected/error_bad_return_for.compile.out
error_bad_return_for.silly:3:5: error: RETURN is not currently allowed in a FOR loop body
    3 |     RETURN 0;
      |     ^
